--- a/src/Inv.Microservice.Api.Logic/Inv.Microservice.Api.Logic.csproj
+++ b/src/Inv.Microservice.Api.Logic/Inv.Microservice.Api.Logic.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.3.1" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Inv.Microservice.Api.Login.Entities\Inv.Microservice.Api.Login.Entities.csproj" />
   </ItemGroup>
 
